--- a/product-catalog-dev.yml
+++ b/product-catalog-dev.yml
@@ -8,7 +8,7 @@ spring:
 #jpa specific properties
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
 
 message: in development profile  - updated
