--- a/product-catalog-dev.yml
+++ b/product-catalog-dev.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/jfsseptkart
     username: root
-    password: root		
+    password: root1234#		
 
 #jpa specific properties
   jpa:
